--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,9 +1,8 @@
 .header {
-  @apply bg-primary-600 max-w-lg m-auto;
+  @apply bg-primary-600;
   height: 56px;
   padding: 0;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  z-index: 50;
 }
 
 .title {
