--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -55,8 +55,6 @@
     vertical-align: middle;
     user-select: none;
     border: 1px solid transparent;
-    // padding: 0.375rem 0.75rem;
-    // font-size: 1rem;
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: background-color 0.15s ease-in-out,
@@ -67,10 +65,13 @@
     }
   }
 
-  input {
-    border: 1px solid #efefef;
+  input,
+  select {
+    border: 1px solid #ccc;
     border-radius: 4px;
     padding: 4px 8px;
+    min-height: 48px;
+    background-color: #fff;
   }
   a {
     @apply text-primary-600 underline;
