--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -21,7 +21,8 @@
   font-size: 100%;
 }
 
-.header nav a {
+.header nav a,
+.header nav button {
   display: inline-block;
   height: 56px;
   line-height: 56px;
