--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,29 +1,5 @@
-.header {
-  @apply bg-primary-600;
-  height: 56px;
-  padding: 0 16px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  z-index: 2;
-}
-
-.title {
-  float: left;
-  margin: 0;
-
-  font-size: 24px;
-  line-height: 56px;
-  font-weight: 400;
-  color: #fff;
-  text-decoration: none;
-}
-
-.header nav {
-  float: right;
-  font-size: 100%;
-}
-
-.header nav a,
-.header nav button {
+nav a,
+nav button {
   display: inline-block;
   height: 56px;
   line-height: 56px;
@@ -36,16 +12,16 @@
   will-change: background-color;
 }
 
-.header nav a:hover,
-.header nav a:active {
+nav a:hover,
+nav a:active {
   background: rgba(0, 0, 0, 0.2);
 }
 
-.header nav a.active {
+nav a.active {
   background: rgba(0, 0, 0, 0.4);
 }
 
-header nav button.hamburger {
+nav button.hamburger {
   position: relative;
   width: 32px;
   padding: 0;
