--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,7 +10,7 @@
     width: 100%;
     padding: 0;
     margin: 0;
-    font-family: "Helvetica Neue", arial, sans-serif;
+    font-family: 'Helvetica Neue', arial, sans-serif;
     font-weight: 400;
 
     -webkit-font-smoothing: antialiased;
