--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -78,6 +78,14 @@
   .card {
     @apply bg-gray-100 text-primary-800 dark:bg-primary-900 dark:text-primary-100 rounded-md border border-gray-400 dark:border-gray-700;
   }
+  // not the same as card above
+  .card-header {
+    @apply bg-gray-2 p-2 text-lg font-bold rounded-t-md border border-b-0 border-gray-400 dark:border-gray-700;
+  }
+
+  .card-body {
+    @apply bg-gray-1 rounded-b-md border border-t-0 border-gray-400 dark:border-gray-700;
+  }
 
   input,
   select {
