--- a/src/components/Charts/LineCharts/line-chart.scss
+++ b/src/components/Charts/LineCharts/line-chart.scss
@@ -1,5 +1,3 @@
-@tailwind utilities;
-
 .lineChart {
   &.darkChart {
     svg {
@@ -8,7 +6,7 @@
           stroke: #fff;
         }
         .axis {
-          color: theme('colors.gray.300');
+          color: #d1d5db;
           :global(text) {
             color: #fff;
           }
@@ -18,10 +16,10 @@
         color: #fff;
       }
       .meanLine {
-        stroke: theme('colors.blue.100');
+        stroke: #dbeafe;
       }
       .timeLine {
-        stroke: theme('colors.highlight.400');
+        stroke: #fb923c;
       }
     }
   }
@@ -42,10 +40,10 @@
       color: #000;
     }
     .meanLine {
-      stroke: theme('colors.blue.400');
+      stroke: #60a5fa;
     }
     .timeLine {
-      stroke: theme('colors.highlight.400');
+      stroke: #fb923c;
     }
   }
 }
