disable zoom on double tab for ios

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -57,7 +57,7 @@
     border-radius: 0.25rem;
     transition: background-color 0.15s ease-in-out,
       border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
+    touch-action: manipulation;
     &.primary {
       @apply bg-highlight-600 text-white font-bold;
     }
