improved routine creation + some wendler creation fixes

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -82,6 +82,9 @@
     &.primary {
       @apply bg-highlight-600 text-white font-bold;
     }
+    &.secondary {
+      @apply bg-gray-600 text-white;
+    }
   }
 
   .card {
